--- a/src/app/modules/studentexam/exams/exams.component.html
+++ b/src/app/modules/studentexam/exams/exams.component.html
@@ -1,6 +1,6 @@
 <!-- <div> -->
 <div style="padding:15px 15px 10px 15px;">
-    <div><strong>Exams</strong></div>
+    <div><strong>Exam</strong></div>
 </div>
 <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <!-- <alert></alert> -->
