--- a/src/app/modules/evaluation/evaluationcontrol/evaluationcontrol.component.html
+++ b/src/app/modules/evaluation/evaluationcontrol/evaluationcontrol.component.html
@@ -16,7 +16,7 @@
             </mat-form-field>
             <mat-form-field appearance="outline" [style.width.px]="200">
                 <mat-label>Exam/Test/Session</mat-label>
-                <mat-select formControlName="searchExamId" (selectionChange)="FilterClass()">
+                <mat-select formControlName="searchExamId">
                     <mat-option [value]="0">select</mat-option>
                     <mat-option *ngFor="let item of FilteredExams" [value]="item.ExamId">{{item.ExamName}}
                     </mat-option>
@@ -39,7 +39,7 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-            <mat-form-field appearance="outline" [style.width.px]="350">
+            <!-- <mat-form-field appearance="outline" [style.width.px]="350">
                 <mat-label>Student</mat-label>
                 <input type="text" matInput formControlName="searchStudentName" [matAutocomplete]="auto">
                 <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
@@ -47,139 +47,76 @@
                         {{option.FullName}}
                     </mat-option>
                 </mat-autocomplete>
-            </mat-form-field>
-            
-            <button [disabled]="loading" mat-raised-button color="accent" (click)="GetEvaluationMapping()">
+            </mat-form-field> -->
+            <!-- <span *ngIf="!EvaluationUpdatable">
+                <mat-form-field appearance="outline" [style.width.px]="200">
+                    <mat-label>Exam/Test/Session</mat-label>
+                    <mat-select formControlName="searchExamId">
+                        <mat-option value="0">select</mat-option>
+                        <mat-option *ngFor="let item of Exams" [value]="item.ExamId">{{item.ExamName}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field appearance="outline" [style.width.px]="150">
+                    <mat-label>Subject</mat-label>
+                    <mat-select formControlName="searchSubjectId">
+                        <mat-option value="0">select</mat-option>
+                        <mat-option *ngFor="let item of SelectedClassSubjects" [value]="item.SubjectId">
+                            {{item.SubjectName}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </span> -->
+            <button [disabled]="loading" mat-raised-button color="accent" (click)="GetStudentClasses()">
                 <mat-icon>search</mat-icon>
                 <mat-icon *ngIf="loading">
                     <mat-spinner diameter="20" color="Blue"></mat-spinner>
                 </mat-icon>
             </button>
         </form>
-        <mat-table #table [dataSource]="AssessmentTypeDatasource"
-            *ngIf="RelevantEvaluationListForSelectedStudent.length>0">
-            <ng-container matColumnDef="ExamName">
-                <mat-header-cell *matHeaderCellDef>Exam/Test/Session
+
+        <!-- <div style="border:1px solid lightgray; display:flex;align-items:flex-start"> -->
+        <mat-table [dataSource]="dataSource" *ngIf="StudentEvaluationList.length>0">
+            <ng-container matColumnDef="FullName">
+                <mat-header-cell *matHeaderCellDef>
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    {{element.ExamName}}
+                    {{element.FullName}}
                 </mat-cell>
             </ng-container>
-            <ng-container matColumnDef="EvaluationName">
-                <mat-header-cell *matHeaderCellDef>Evaluation type
+            <ng-container matColumnDef="Submitted">
+                <mat-header-cell *matHeaderCellDef>Submitted
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    {{element.EvaluationName}}
+                    <mat-checkbox (click)="$event.stopPropagation()" (change)="updateSubmitted(element,$event)"
+                        [checked]="element.Submitted">
+                    </mat-checkbox>
                 </mat-cell>
             </ng-container>
-            <ng-container matColumnDef="ClassGroupName">
-                <mat-header-cell *matHeaderCellDef>Class/Class group
-                </mat-header-cell>
-                <mat-cell *matCellDef="let element">
-                    {{element.ClassGroupName}}
-                </mat-cell>
-            </ng-container>
-            <!-- <ng-container matColumnDef="Subject">
-                <mat-header-cell *matHeaderCellDef>Subject
-                </mat-header-cell>
-                <mat-cell *matCellDef="let element">
-                    {{element.Subject}}
-                </mat-cell>
-            </ng-container> -->
             <ng-container matColumnDef="Action">
                 <mat-header-cell *matHeaderCellDef>
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    <button style="margin-right: 15px;" [disabled]="loading || !element.Action1 || Permission=='read'"
-                        matTooltip="display" mat-mini-fab color="accent" (click)="StartEvaluation(element)">
-                        <mat-icon>pageview</mat-icon>
+                    <button style="margin-right: 15px;" [disabled]="loading || !element.Action" matTooltip="update" mat-mini-fab
+                        (click)="UpdateOrSave(element)">
+                        <mat-icon>save</mat-icon>
+                        <mat-icon *ngIf="loading">
+                            <mat-spinner diameter="20" color="Blue"></mat-spinner>
+                        </mat-icon>
                     </button>
                 </mat-cell>
             </ng-container>
-            <mat-header-row *matHeaderRowDef="EvaluationPlanColumns"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: EvaluationPlanColumns;let indx=index" class="element-row"
-                style="align-items: center;"></mat-row>
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row" style="align-items: center;">
+            </mat-row>
         </mat-table>
-        <div id="printSection" *ngIf="StudentEvaluationList.length>0">
-            <div
-                style="margin:30px 15px 15px 30px; display:flex;flex-direction: column;justify-content: center; width:100%">
-                <span *ngFor="let item of PrintHeading">
-                    <span style="font-size:larger;display: flex;justify-content: center;">{{item.Logic}}</span>
-                </span>
-            </div>            
-            <mat-table #table [dataSource]="dataSource" *ngIf="StudentEvaluationList.length>0">
-                <ng-container matColumnDef="StudentEvaluationResultId">
-                    <mat-header-cell *matHeaderCellDef>Id
-                    </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                        {{element.StudentEvaluationResultId}}
-                    </mat-cell>
-                </ng-container>
-                <ng-container matColumnDef="Description">
-                    <mat-header-cell *matHeaderCellDef>
-                    </mat-header-cell>
-                    <mat-cell *matCellDef="let element" [attr.colspan]="2"
-                        style="display:flex; flex-direction: column;justify-content: start;">
-                        <!-- <span *ngIf="element.ClassEvalCategoryId>0">{{element.CatName}}</span> -->
-                        <span
-                            style="width:100%; margin: 15px;display:flex; flex-direction:column;justify-content: flex-start;">
-                            <span
-                                *ngIf="element.QuestionnaireType=='Heading' || element.QuestionnaireType=='Sub Heading'"
-                                style="font-weight: bold; width: 100%;padding: 15px 15px 10px 0px;">
-                                {{element.Description}}</span>
-                            <span *ngIf="element.QuestionnaireType=='Questionnaire'"
-                                style="width: 100%;padding: 15px 15px 10px 0px;">
-                                <mat-icon class="icon">star_outline</mat-icon> {{element.Description}}
-                            </span>
-                            <span [innerHTML]="element.AnswerText|encodeHTML"
-                                style="border:1px solid lightgray; width: 100%;min-height: 50px;padding: 15px;margin: 15px;"
-                                *ngIf="!EvaluationUpdatable && element.ClassEvaluationAnswerOptionParentId==0
-                                && element.QuestionnaireType=='Questionnaire'">
-                            </span>
-                            <pre *ngIf="element.History.length>0">
-                            <span [innerHTML]="element.History|encodeHTML"
-                                class="history"
-                                *ngIf="EvaluationUpdatable && element.ClassEvaluationAnswerOptionParentId==0 
-                                && element.History.length>0">
-                            </span>
-                            </pre>
-                        </span>
-                        <span style="width:100%;">
-                            <span style="padding: 15px 15px 15px 40px;"
-                                *ngIf="element.MultipleAnswer==1 && element.ClassEvaluationAnswerOptionParentId>0">
-                                <mat-checkbox style="margin-right: 15px;"
-                                    *ngFor="let item of element.ClassEvaluationOptions;let i=index"
-                                    (click)="$event.stopPropagation()" name="options_{{i}}"
-                                    [value]="item.ClassEvaluationAnswerOptionsId" [checked]="item.checked">
-                                    {{item.Title}}
-                                </mat-checkbox>
-                            </span>
-                            <span style="padding: 15px 15px 15px 40px;"
-                                *ngIf="element.ClassEvaluationAnswerOptionParentId>0 && (element.MultipleAnswer==0 || element.MultipleAnswer==null)">
-                                <mat-radio-group [name]="'options_'+element.ClassEvaluationId">
-                                    <mat-radio-button style="margin: 10px 10px 0px 0px;"
-                                        [name]="'options_'+element.ClassEvaluationId"
-                                        *ngFor="let item of element.ClassEvaluationOptions;let i=index"
-                                        [value]="item.ClassEvaluationAnswerOptionsId" [checked]="item.checked">
-                                        {{item.Title}}
-                                    </mat-radio-button>
-                                </mat-radio-group>
-                            </span>
-                        </span>
-                    </mat-cell>
-                </ng-container>
-                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                <mat-row *matRowDef="let row; columns: displayedColumns;let indx=index" class="element-row"
-                    style="align-items: center;"></mat-row>
-            </mat-table>
-        </div>
-        <span style="margin: 15px;display: flex;justify-content: center;" fxLayout="row"
+    </div>
+    <!-- <span style="margin: 15px;display: flex;justify-content: center;" fxLayout="row"
             *ngIf="StudentEvaluationList.length>0">
             <button [disabled]="loading || StudentEvaluationList.length ==0" matTooltip="print"
                 printSectionId="printSection" [useExistingCss]="true" ngxPrint class="mat-raised-button">
                 <mat-icon>print</mat-icon>
             </button>
-            <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[1,5,50,100]"></mat-paginator>
-        </span>
-    </div>
+        </span> -->
+
 </div>
