--- a/src/app/modules/student/searchstudent/searchstudent.component.html
+++ b/src/app/modules/student/searchstudent/searchstudent.component.html
@@ -8,7 +8,7 @@
                 <mat-form-field appearance="outline" style="width: 200px;">
                     <mat-label>Class</mat-label>
                     <mat-select formControlName="searchClassId" (selectionChange)="ClearData()">
-                        <mat-option value="0">select</mat-option>
+                        <mat-option value="0">no class</mat-option>
                         <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
                             {{item.ClassName}}
                         </mat-option>
