--- a/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
+++ b/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
@@ -165,6 +165,11 @@
                                     <input matInput [maxlength]="20" [(ngModel)]="OffLineReceiptNo"
                                         [value]="OffLineReceiptNo" autocomplete="Off">
                                 </mat-form-field>
+                                <mat-form-field style="width: 150px;margin-right: 15px;">
+                                    <mat-label>Cash Amount</mat-label>
+                                    <input matInput [maxlength]="20" formControlName="CashAmount"
+                                       autocomplete="Off">
+                                </mat-form-field>
                                 <mat-form-field style="width: 150px;">
                                     <mat-label>Payment Type</mat-label>
                                     <mat-select [(ngModel)]="PaymentTypeId" [value]="PaymentTypeId"
