--- a/src/app/modules/schoolreports/result/result.component.html
+++ b/src/app/modules/schoolreports/result/result.component.html
@@ -26,6 +26,7 @@
                 <mat-form-field appearance="outline">
                     <mat-label>Section</mat-label>
                     <mat-select formControlName="searchSectionId">
+                        <mat-option value="0">select</mat-option>
                         <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">
                             {{item.MasterDataName}}
                         </mat-option>
