--- a/src/app/modules/evaluation/evaluationmaster/evaluationmaster.component.html
+++ b/src/app/modules/evaluation/evaluationmaster/evaluationmaster.component.html
@@ -157,7 +157,7 @@
                 </button>
                 <button [disabled]="loading 
                                 || !element.Action 
-                                || Permission !='rwd'" matTooltip="delete" mat-mini-fab (click)="Delete(element)">
+                                || Permission !='rwd'" matTooltip="delete" mat-mini-fab (click)="delete(element)">
                     <mat-icon>delete</mat-icon>
                 </button>
             </mat-cell>
