--- a/src/app/modules/ClassSubject/studentsubjectreport/studentsubjectreport.component.scss
+++ b/src/app/modules/ClassSubject/studentsubjectreport/studentsubjectreport.component.scss
@@ -11,3 +11,9 @@ button{
 mat-cell,mat-header-cell{
     justify-content: flex-start;
 }
+.mat-column-SubjectName{
+    flex: 1 0 120px;
+}
+.mat-column-SubjectCount{
+    flex: 1 0 80px;
+}
