--- a/src/app/modules/classes/classgroup/classgroup.component.html
+++ b/src/app/modules/classes/classgroup/classgroup.component.html
@@ -5,32 +5,17 @@
     <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <div style="padding: 15px;" fxLayout="row wrap">
         <div style="width: 100%;">
-            <!-- <form [formGroup]="searchForm">
-                <mat-form-field appearance="outline" [style.width.pc]="25">
-                    <mat-label>Class</mat-label>
-                    <mat-select formControlName="searchClassId">
-                        <mat-option *ngFor="let option of ClassMasters" [value]="option.ClassId">
-                            {{option.ClassName}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <button [disabled]="loading" mat-raised-button color="accent" (click)="Getclassgroups()">
-                    <mat-icon>search</mat-icon>
-                    <mat-icon *ngIf="loading">
-                        <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                    </mat-icon>
-                </button>
-            </form> -->
+           
             <mat-table #table [dataSource]="dataSource">
                 <ng-container matColumnDef="ClassGroupId">
-                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Sr. No.
+                    <mat-header-cell *matHeaderCellDef>Sr. No.
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         {{element.ClassGroupId}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="GroupName">
-                    <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef>Group Name
+                    <mat-header-cell *matHeaderCellDef>Group Name
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-form-field appearance="outline">
@@ -68,13 +53,18 @@
                             <mat-icon>add</mat-icon>
                         </button>
                     </mat-header-cell>
-                    <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                        <button [disabled]="loading || !element.Action || IscurrentBatchSelect==0 || Permission=='deny'"
+                    <mat-cell *matCellDef="let element">
+                        <button style="margin-right:15px" [disabled]="loading || !element.Action || IscurrentBatchSelect==0 || Permission=='deny'"
                             matTooltip="save" mat-raised-button color="accent" (click)="UpdateOrSave(element)">
                             <mat-icon>save</mat-icon>
                             <mat-icon *ngIf="loading">
                                 <mat-spinner diameter="20" color="Blue"></mat-spinner>
                             </mat-icon>
+                        </button>
+                        <button [disabled]="loading 
+                                || !element.Action 
+                                || Permission !='rwd'" matTooltip="delete" mat-mini-fab (click)="delete(element)">
+                            <mat-icon>delete</mat-icon>
                         </button>
                     </mat-cell>
                 </ng-container>
