--- a/src/app/modules/evaluation/studentevaluation/studentevaluation.component.html
+++ b/src/app/modules/evaluation/studentevaluation/studentevaluation.component.html
@@ -7,20 +7,20 @@
         <mat-form-field appearance="outline" style="width:200px">
             <mat-label>Class</mat-label>
             <mat-select formControlName="searchClassId" (selectionChange)="GetStudentClasses()">
-                <mat-option *ngFor="let item of Classes" [value]="item.ClassSectionId">
+                <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
                     {{item.ClassName}}
                 </mat-option>
             </mat-select>
         </mat-form-field>
-        <!-- <mat-form-field appearance="outline" style="width:200px">
+        <mat-form-field appearance="outline" style="width:200px">
             <mat-label>Section</mat-label>
-            <mat-select formControlName="searchSectionId">
+            <mat-select formControlName="searchSectionId" (selectionChange)="GetStudentClasses()">
                 <mat-option value="0">select</mat-option>
                 <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">
                     {{item.MasterDataName}}
                 </mat-option>
             </mat-select>
-        </mat-form-field> -->
+        </mat-form-field>
         <mat-form-field appearance="outline" [style.width.px]="300">
             <mat-label>Student</mat-label>
             <input type="text" matInput formControlName="searchStudentName" [matAutocomplete]="auto">
@@ -92,8 +92,8 @@
                         <mat-spinner diameter="20" color="Blue"></mat-spinner>
                     </mat-icon>
                 </button>
-                <span *ngIf="element.Duration>0" style="font-weight:bold;padding:15px">Duration:
-                    {{element.Duration}}</span>
+                <span *ngIf="element.TempDuration>0" style="font-weight:bold;padding:15px">Duration:
+                    {{element.TempDuration}}</span>
             </mat-cell>
         </ng-container>
         <mat-header-row *matHeaderRowDef="EvaluationPlanColumns"></mat-header-row>
