--- a/src/app/modules/student/searchstudent/searchstudent.component.html
+++ b/src/app/modules/student/searchstudent/searchstudent.component.html
@@ -5,10 +5,19 @@
         <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
         <form [formGroup]="studentSearchForm" style="display:flex;flex-direction: column;">
             <div>
+                <!-- <mat-form-field appearance="outline" style="width: 200px;">
+                    <mat-label>Previous Class</mat-label>
+                    <mat-select formControlName="searchPreviousClassId" (selectionChange)="ClearData()">
+                        <mat-option value="0">No class</mat-option>
+                        <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
+                            {{item.ClassName}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field> -->
                 <mat-form-field appearance="outline" style="width: 200px;">
                     <mat-label>Class</mat-label>
                     <mat-select formControlName="searchClassId" (selectionChange)="ClearData()">
-                        <mat-option value="0">no class</mat-option>
+                        <mat-option value="0">No class</mat-option>
                         <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
                             {{item.ClassName}}
                         </mat-option>
