--- a/src/app/modules/specialfeature/StudentActivity/studentactivity.component.html
+++ b/src/app/modules/specialfeature/StudentActivity/studentactivity.component.html
@@ -5,6 +5,15 @@
 <div style="width: 100%;">
     <form [formGroup]="searchForm">
         <div>
+            <mat-form-field appearance="outline" style="width: 150px;">
+                <mat-label>Class</mat-label>
+                <mat-select formControlName="searchClassId" (selectionChange)="GetStudents()">
+                    <mat-option value="0">select</mat-option>
+                    <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
+                        {{item.ClassName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
             <mat-form-field appearance="outline" [style.width.px]="300">
                 <mat-label>Student</mat-label>
                 <input type="text" matInput
